--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/createPostFragment"
         android:name="com.example.sportin.CreatePostFragment"
-        android:label="fragment_create_post"
+        android:label="@string/create_post"
         tools:layout="@layout/fragment_create_post" >
         <action
             android:id="@+id/action_createPostFragment_to_homeFragment"
