--- a/app/src/main/res/layout/activity_phone_verification.xml
+++ b/app/src/main/res/layout/activity_phone_verification.xml
@@ -46,6 +46,20 @@
 <!--                    android:layout_height="match_parent" />-->
 <!--            </com.google.android.material.textfield.TextInputLayout>-->
 
+
+
+                <TextView
+                    android:id="@+id/country_code"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:inputType="number"
+                    android:hint="+91"
+                    android:gravity="center"
+                    android:maxLength="10"
+                    android:textSize="12sp"
+                    tools:ignore="TextFields" />
+
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
